--- a/CCIP/Supporting Files/CCIP.entitlements
+++ b/CCIP/Supporting Files/CCIP.entitlements
@@ -20,18 +20,18 @@
 	<array/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.coscup.ccip</string>
-		<string>group.org.sitcon.ccip</string>
-		<string>group.org.pycontw.ccip</string>
+		<string>group.tw.ocf.ccip.coscup</string>
+		<string>group.tw.ocf.ccip.sitcon</string>
+		<string>group.tw.ocf.ccip.pycontw</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)org.coscup.CCIP-iOS-Dev</string>
-		<string>$(AppIdentifierPrefix)org.coscup.CCIP-iOS</string>
-		<string>$(AppIdentifierPrefix)org.sitcon.CCIP-iOS-Dev</string>
-		<string>$(AppIdentifierPrefix)org.sitcon.CCIP-iOS</string>
-		<string>$(AppIdentifierPrefix)org.pycontw.CCIP-iOS-Dev</string>
-		<string>$(AppIdentifierPrefix)org.pycontw.CCIP-iOS</string>
+		<string>$(AppIdentifierPrefix)tw.ocf.COSCUP-CCIP-Dev</string>
+		<string>$(AppIdentifierPrefix)tw.ocf.COSCUP-CCIP</string>
+		<string>$(AppIdentifierPrefix)tw.ocf.SITCON-CCIP-Dev</string>
+		<string>$(AppIdentifierPrefix)tw.ocf.SITCON-CCIP</string>
+		<string>$(AppIdentifierPrefix)tw.ocf.PyConTW-CCIP-Dev</string>
+		<string>$(AppIdentifierPrefix)tw.ocf.PyConTW-CCIP</string>
 	</array>
 </dict>
 </plist>
