--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -1,8 +1,8 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.coscup.CCIP-iOS
+MAIN_PRODUCT_BUNDLE_IDENTIFIER              = tw.ocf.COSCUP-CCIP
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = 2.2.111
 MAIN_BUILD_SHORT_VERSION                    = 2.2
 APP_NAME                                    = '(@"COSCUP")'
-APP_GROUP_ID                                = group.org.coscup.ccip
+APP_GROUP_ID                                = group.tw.ocf.ccip.coscup
 APP_SCHEME                                  = ccip-coscup
