--- a/CCIP/Supporting Files/config.plist
+++ b/CCIP/Supporting Files/config.plist
@@ -69,9 +69,9 @@
 			<key>AnnouncementDashedLineColor</key>
 			<string>#e9e9e9</string>
 			<key>IRCTitleLeftColor</key>
-			<string></string>
+			<string>#425d4f</string>
 			<key>IRCTitleRightColor</key>
-			<string></string>
+			<string>#429537</string>
 			<key>IRCTitleTextColor</key>
 			<string></string>
 			<key>MoreTitleLeftColor</key>
