--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -1,4 +1,4 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER              = tw.ocf.#domain#-CCIP#Dev#
+MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.#CONF_NAME#.CCIP-iOS#Dev#
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = #BUILD_VERSION#
