--- a/CCIP/Supporting Files/CCIP.debug.xcconfig
+++ b/CCIP/Supporting Files/CCIP.debug.xcconfig
@@ -1,8 +1,8 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER              = tw.ocf.COSCUP-CCIP
+MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.coscup.CCIP-iOS
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
-MAIN_BUILD_VERSION                          = 2.2.111
-MAIN_BUILD_SHORT_VERSION                    = 2.2
+MAIN_BUILD_VERSION                          = 2.3.130
+MAIN_BUILD_SHORT_VERSION                    = 2.3
 APP_NAME                                    = '(@"COSCUP")'
 APP_GROUP_ID                                = group.tw.ocf.ccip.coscup
 APP_SCHEME                                  = ccip-coscup
