hotfix for ITMS-90062 error

--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -2,7 +2,7 @@ MAIN_PRODUCT_BUNDLE_IDENTIFIER              = org.#CONF_NAME#.CCIP-iOS#Dev#
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = #BUILD_VERSION#
-MAIN_BUILD_SHORT_VERSION                    = #BUILD_SHORT_VERSION#
+MAIN_BUILD_SHORT_VERSION                    = #BUILD_VERSION#
 APP_NAME                                    = '(@"#APP_NAME#")'
 APP_GROUP_ID                                = group.tw.ocf.ccip.#CONF_NAME#
 APP_SCHEME                                  = ccip-#CONF_NAME#
