--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -1,8 +1,8 @@
-MAIN_PRODUCT_BUNDLE_IDENTIFIER              = app.ccip.opass#Dev#
+MAIN_PRODUCT_BUNDLE_IDENTIFIER              = app.opass.ccip#Dev#
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = #BUILD_VERSION#
 MAIN_BUILD_SHORT_VERSION                    = #BUILD_VERSION#
 APP_NAME                                    = '(@"#APP_NAME#")'
-APP_GROUP_ID                                = group.app.ccip.opass
+APP_GROUP_ID                                = group.app.opass.ccip
 APP_SCHEME                                  = opass
