--- a/CCIP/Supporting Files/OPass/GoogleService-Info.plist
+++ b/CCIP/Supporting Files/OPass/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>1003222886889-svv7okquqmq3q80g0tudijmda0tbgvq0.apps.googleusercontent.com</string>
+	<string>1003222886889-33p63pobesngvhms3q2eblgalo6itggh.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1003222886889-svv7okquqmq3q80g0tudijmda0tbgvq0</string>
+	<string>com.googleusercontent.apps.1003222886889-33p63pobesngvhms3q2eblgalo6itggh</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBNCQQ4IV_1e9kGXQ2D73-itb9MXTm_84g</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>app.ccip.opass</string>
+	<string>app.opass.ccip</string>
 	<key>PROJECT_ID</key>
 	<string>opass-8b7db</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1003222886889:ios:0de259113258c8f4</string>
+	<string>1:1003222886889:ios:d5979168865b5f60</string>
 	<key>DATABASE_URL</key>
 	<string>https://opass-8b7db.firebaseio.com</string>
 </dict>
