--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -31,6 +31,7 @@ def ccip_pods
     pod 'MWPhotoBrowser', '~> 2.1.2'
     pod 'MBProgressHUD', '~> 0.9.2'
     pod 'FSPagerView'
+    pod 'Collection'
 end
 
 target 'OPass' do
