update for wrong MessageButtonLeftColor

--- a/CCIP/Supporting Files/config.plist
+++ b/CCIP/Supporting Files/config.plist
@@ -35,7 +35,7 @@
 			<key>UsedButtonRightColor</key>
 			<string>#cfc0d9</string>
 			<key>MessageButtonLeftColor</key>
-			<string>#509d34</string>
+			<string>#170a31</string>
 			<key>MessageButtonRightColor</key>
 			<string>#532875</string>
 			<key>NavigationIndicatorColor</key>
