add g0v Summit 2018 WiFi config

--- a/CCIP/Supporting Files/OPass/PassAssets.bundle/WiFiConfiguration.plist
+++ b/CCIP/Supporting Files/OPass/PassAssets.bundle/WiFiConfiguration.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>SSID</key>
-	<string></string>
+	<string>g0v summit 2018</string>
 	<key>Pass</key>
 	<string></string>
 </dict>
