update conf-logo to g0v logo and add LogoUseMask property config

--- a/CCIP/Supporting Files/config.plist
+++ b/CCIP/Supporting Files/config.plist
@@ -14,6 +14,8 @@
 		<string>HH:mm</string>
 		<key>Themes</key>
 		<dict>
+			<key>LogoUseMask</key>
+			<false/>
 			<key>DevelopingLogoMaskColor</key>
 			<string>#f2a900</string>
 			<key>RedeemButtonLeftColor</key>
