add a workaround of schedule content cache for offline mode

--- a/CCIP/Supporting Files/Settings.bundle/Root.plist
+++ b/CCIP/Supporting Files/Settings.bundle/Root.plist
@@ -32,6 +32,16 @@
 			<key>Type</key>
 			<string>PSTitleValueSpecifier</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>ClearScheduleContentCache</string>
+			<key>Key</key>
+			<string>ClearScheduleContentCache</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
