--- a/CCIP/Podfile
+++ b/CCIP/Podfile
@@ -31,6 +31,7 @@ def ccip_pods
     pod 'MBProgressHUD', '~> 0.9.2'
     pod 'FSPagerView'
     pod 'Collection'
+    pod 'thenPromise'
     pod 'Down'
 end
 
