--- a/CCIP/Supporting Files/config.plist
+++ b/CCIP/Supporting Files/config.plist
@@ -8,6 +8,8 @@
 		<string>b6213f49-e356-4b48-aa9d-7cf10ce1904d</string>
 		<key>DateTimeFormat</key>
 		<string>yyyy-MM-dd&apos;T&apos;HH:mm:ss.SSSZ</string>
+		<key>DisplayDateTimeFormat</key>
+		<string>yyyy-MM-dd HH:mm</string>
 		<key>DisplayDateFormat</key>
 		<string>M/d</string>
 		<key>DisplayTimeFormat</key>
