--- a/CCIP/CCIP/Tabs/MoreTab/AcknowledgementsView/Project_Info_and_Contributors.json
+++ b/CCIP/CCIP/Tabs/MoreTab/AcknowledgementsView/Project_Info_and_Contributors.json
@@ -1,9 +1,9 @@
 {
 	"self": {
 		"project_name": "CCIP-iOS",
-		"github_repo": "CPRTeam/CCIP-iOS",
+		"github_repo": "CCIP-App/CCIP-iOS",
 		"site": "",
-		"contributors": [2, 1, 5, 3, 4]
+		"contributors": [2, 6, 1, 5, 3, 4]
 	},
 	"contributors" : [
 		{
@@ -85,22 +85,38 @@
 			"gravatar_hash": "",
 			"gravatar_email": "tiger0319@gmail.com",
 			"website": ""
-		},
-		{
-			"index": 5,
-			"name": "曉晰",
-			"nick_name": "Estelle Chen",
-			"email": "moomyiting@gmail.com",
-			"role": "Interface Design",
-			"github": {
-				"login": "moomyiting",
-				"id": "3964081",
-				"email": "moomyiting@gmail.com"
-			},
-			"avatar_link": "",
-			"gravatar_hash": "",
-			"gravatar_email": "",
-			"website": ""
-		}
+        },
+        {
+            "index": 5,
+            "name": "曉晰",
+            "nick_name": "Estelle Chen",
+            "email": "moomyiting@gmail.com",
+            "role": "Interface Design",
+            "github": {
+                "login": "moomyiting",
+                "id": "3964081",
+                "email": "moomyiting@gmail.com"
+            },
+            "avatar_link": "",
+            "gravatar_hash": "",
+            "gravatar_email": "",
+            "website": ""
+        },
+        {
+            "index": 6,
+            "name": "Yan Liu",
+            "nick_name": "Chun Yan Liu",
+            "email": "chunyan.liu@yannest.net",
+            "role": "Interface Design",
+            "github": {
+                "login": "yanyiyi",
+                "id": "4016873",
+                "email": "chunyan.liu@yannest.net"
+            },
+            "avatar_link": "",
+            "gravatar_hash": "",
+            "gravatar_email": "",
+            "website": ""
+        }
 	]
 }
