--- a/OPass/Supporting Files/config.plist
+++ b/OPass/Supporting Files/config.plist
@@ -123,9 +123,9 @@
 			<string>summit.g0v.tw</string>
 			<key>GamePath</key>
 			<string></string>
-			<key>MapsUseWeb</key>
+			<key>VenueUseWeb</key>
 			<true/>
-			<key>MapsPath</key>
+			<key>VenuePath</key>
 			<string>https://summit.g0v.tw/2018/agenda/?mode=app&amp;__ccip=##random###maps</string>
 			<key>StaffUseWeb</key>
 			<true/>
