update OPass-Watch and OPass-Watch Extension to Swift 4.2

--- a/OPass-Watch Extension/OPass-Watch Extension.entitlements
+++ b/OPass-Watch Extension/OPass-Watch Extension.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.coscup.ccip</string>
+		<string>group.app.ccip.opass</string>
 	</array>
 </dict>
 </plist>
