--- a/OPass-Watch/OPass-Watch.entitlements
+++ b/OPass-Watch/OPass-Watch.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.coscup.ccip</string>
+		<string>group.app.ccip.opass</string>
 	</array>
 </dict>
 </plist>
