remove Settings.bundle/AppFlags.plist and place to ignore file list for auto-gen files

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ fastlane/screenshots
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# auto-generate files
+*/Settings.bundle/AppFlags.plist
