add universal link domain with opass.app

--- a/Supporting Files/OPass.entitlements
+++ b/Supporting Files/OPass.entitlements
@@ -6,6 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
+		<string>applinks:opass.app</string>
 		<string>applinks:opass.page.link</string>
 	</array>
 	<key>com.apple.developer.networking.HotspotConfiguration</key>
