--- a/Supporting Files/Settings.bundle/Root-blank.plist
+++ b/Supporting Files/Settings.bundle/Root-blank.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2.3.135 #5c7c2b8 arm64</string>
+			<string></string>
 			<key>Key</key>
 			<string>version_preference</string>
 			<key>Title</key>
@@ -24,7 +24,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>2018-08-07 04:56:35 GMT+8</string>
+			<string></string>
 			<key>Key</key>
 			<string>build_timestamp</string>
 			<key>Title</key>
@@ -33,14 +33,14 @@
 			<string>PSTitleValueSpecifier</string>
 		</dict>
 		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
-			<string>ClearScheduleContentCache</string>
-			<key>Key</key>
-			<string>ClearScheduleContentCache</string>
 			<key>DefaultValue</key>
 			<false/>
+			<key>Key</key>
+			<string>ClearScheduleContentCache</string>
+			<key>Title</key>
+			<string>ClearScheduleContentCache</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
 		</dict>
 	</array>
 	<key>StringsTable</key>
