add NSBluetoothPeripheralUsageDescription into Info.plist

--- a/Supporting Files/Info.plist
+++ b/Supporting Files/Info.plist
@@ -45,6 +45,8 @@
 	<string></string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string></string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
