add dl.opass.app domain for dynamic link

--- a/Supporting Files/Info.plist
+++ b/Supporting Files/Info.plist
@@ -29,6 +29,11 @@
 			</array>
 		</dict>
 	</array>
+	<key>FirebaseDynamicLinksCustomDomains</key>
+	<array>
+		<string>https://dl.opass.app</string>
+		<string>https://opass.page.link</string>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(MAIN_BUILD_VERSION)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
