--- a/Supporting Files/config.plist
+++ b/Supporting Files/config.plist
@@ -7,7 +7,7 @@
 		<key>ogToken</key>
 		<string>b6213f49-e356-4b48-aa9d-7cf10ce1904d</string>
 		<key>DisplayDateTimeFormat</key>
-		<string>yyyy-MM-dd HH:mm</string>
+		<string>YYYY-MM-dd HH:mm</string>
 		<key>DisplayDateFormat</key>
 		<string>M/d</string>
 		<key>DisplayTimeFormat</key>
