move scandit key to config file

--- a/Supporting Files/config.plist
+++ b/Supporting Files/config.plist
@@ -6,6 +6,8 @@
 	<dict>
 		<key>ogToken</key>
 		<string>b6213f49-e356-4b48-aa9d-7cf10ce1904d</string>
+		<key>scandit</key>
+		<string>2BXy4CfQi9QFc12JnjId7mHH58SdYzNC90Uo07luUUY</string>
 		<key>DisplayDateTimeFormat</key>
 		<string>YYYY-MM-dd HH:mm</string>
 		<key>DisplayDateFormat</key>
