--- a/Supporting Files/Info.plist
+++ b/Supporting Files/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MAIN_BUILD_SHORT_VERSION)</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
