--- a/Supporting Files/OPass.debug.xcconfig
+++ b/Supporting Files/OPass.debug.xcconfig
@@ -1,8 +1,9 @@
 MAIN_PRODUCT_BUNDLE_IDENTIFIER              = app.opass.ccip
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
-MAIN_BUILD_VERSION                          = 3.0.1004
-MAIN_BUILD_SHORT_VERSION                    = 3.0.1004
+NOTIFICATION_PRODUCT_BUNDLE_IDENTIFIER      = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).notification-service
+MAIN_BUILD_VERSION                          = 3.0.1103
+MAIN_BUILD_SHORT_VERSION                    = 3.0.1103
 APP_NAME                                    = '(@"OPass")'
 APP_GROUP_ID                                = group.app.opass.ccip
 APP_SCHEME                                  = opass
