--- a/Supporting Files/OPass.xcconfig
+++ b/Supporting Files/OPass.xcconfig
@@ -1,6 +1,7 @@
 MAIN_PRODUCT_BUNDLE_IDENTIFIER              = app.opass.ccip#Dev#
 WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).watchkitapp
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
+NOTIFICATION_PRODUCT_BUNDLE_IDENTIFIER      = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).notification-service
 MAIN_BUILD_VERSION                          = #BUILD_VERSION#
 MAIN_BUILD_SHORT_VERSION                    = #BUILD_VERSION#
 APP_NAME                                    = '(@"#APP_NAME#")'
