--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ matrix:
     - os: osx
       osx_image: xcode11
       script:
-        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone X,OS=13" clean build | xcpretty
+        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone Xʀ,OS=13" clean build | xcpretty
     - os: osx
       osx_image: xcode10.2
       script:
-        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone X,OS=12.2" clean build | xcpretty
+        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone Xʀ,OS=12.2" clean build | xcpretty
 
 language: objective-c
 podfile: Podfile
