--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,19 @@ matrix:
     - os: osx
       osx_image: xcode11
       script:
-        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone Xʀ,OS=13.0" clean build | xcpretty
+        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone 11,OS=13.0" clean build | xcpretty
     - os: osx
-      osx_image: xcode10.2
+      osx_image: xcode11.1
       script:
-        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone Xʀ,OS=12.2" clean build | xcpretty
+        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone 11,OS=13.1" clean build | xcpretty
+    - os: osx
+      osx_image: xcode11.2
+      script:
+        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone 11,OS=13.2" clean build | xcpretty
+    - os: osx
+      osx_image: xcode11.3
+      script:
+        - set -o pipefail && xcodebuild -workspace OPass.xcworkspace -scheme OPass -destination "platform=iOS Simulator,name=iPhone 11,OS=13.2" clean build | xcpretty
 
 language: objective-c
 podfile: Podfile
