--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,5 @@ fastlane/screenshots
 iOSInjectionProject/
 
 # auto-generate files
-*/Settings.bundle/AppFlags.plist
-*/Settings.bundle/Root.plist
+**/Settings.bundle/AppFlags.plist
+**/Settings.bundle/Root.plist
