set `PortalDomain` to config

--- a/Supporting Files/OPass/config.plist
+++ b/Supporting Files/OPass/config.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>OPass</key>
 	<dict>
+		<key>PortalDomain</key>
+		<string>portal.opass.app</string>
 		<key>ogToken</key>
 		<string>b6213f49-e356-4b48-aa9d-7cf10ce1904d</string>
 		<key>scandit</key>
