set profile udid during build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,20 @@ jobs:
       with:
         p12-file-base64: ${{ secrets.CERTIFICATES_FILE_BASE64 }}
         p12-password: ${{ secrets.CERTIFICATES_PASSWORD }}
-    - name: Download Provisioning Profiles
+    - name: Download OPass Profile
+      id: opass-profiles
       uses: Apple-Actions/download-provisioning-profiles@v1
       with:
         bundle-id: app.opass.ccip
+        profile-type: IOS_APP_STORE
+        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
+        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+    - name: Download OPass Wildcard Profile
+      id: opass-wildcard-profiles
+      uses: Apple-Actions/download-provisioning-profiles@v1
+      with:
+        bundle-id: app.opass.ccip.*
         profile-type: IOS_APP_STORE
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
@@ -30,6 +40,9 @@ jobs:
         podfile-path: Podfile.lock
     - name: Build
       run: ./build.sh
+      env:
+        OPASS_PROVISIONING_PROFILES: ${{ steps.opass-profiles.outputs.profiles }}
+        OPASS_WILDCARD_PROVISIONING_PROFILES: ${{ steps.opass-wildcard-profiles.outputs.profiles }}
     - name: Upload to TestFlight
       uses: Apple-Actions/upload-testflight-build@master
       with:
